<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" android:background="#5db94e">

    <TextView
        android:id="@+id/tvCustomGameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterNumber"
        android:textAppearance="?android:attr/textAppearanceMedium" android:layout_margin="5dp" android:shadowColor="#000" android:shadowDx="2" android:shadowDy="3" android:shadowRadius="2"/>

    <EditText
        android:id="@+id/editCustomNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" android:layout_margin="5dp">

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btCustomOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btCustomCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>